compiler/internal/frontend/testdata/parser/positive/function.tetra
func add(a: Int, b: Int) -> Int:
    return a + b

func main() -> Int:
    return add(40, 2)
