compiler/internal/frontend/testdata/parser/negative/async.tetra
func main() -> Int:
    await
    return 0
